--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@ body {
 <div class="stars3" aria-hidden="true"></div>
 <main class="main">
 	<section class="contact">
-		<h1 class="title">Azizi Developments</h1>
-		<h2 class="sub-title">Site Under Construction</h2>
+		<h1 class="title">Site Under Construction</h1>
 	</section>
 </main>
