--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@ body {
 }
 </style>
 
+<title>...</title>
+
 <div class="overlay"></div>
 <div class="stars" aria-hidden="true"></div>
 <div class="starts2" aria-hidden="true"></div>
